# shark-ai

./: README.md  data.json  requirements-iree-pinned.txt
.github/workflows/: ci-fusilli-plugin.yml  ci-libshortfin.yml  ci-sharkfuser.yml  ci-sharktuner.yml  ci_boo_conv.yml  ci_e2e_llm_model_test.yml  ci_eval_llama_3.1_8b.yml  ci_llama_3.1_405b_fp4.yml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_0530a9433b6bd4f8_dataset_transforms_test_py.html  z_08ad65b064ce2946_convert_dataset_test_py.html  z_08ad65b064ce2946_convert_to_json_test_py.html  z_08ad65b064ce2946_list_sfaetensors_test_py.html  z_08ad65b064ce2946_sharktank_test_py.html  z_0e9780277b093088_llama_integration_test_py.html  z_10938998537536e0___init___py.html  z_10938998537536e0_clip_py.html  z_10938998537536e0_export_py.html  z_10938998537536e0_export_toy_text_model_iree_test_data_py.html  z_10938998537536e0_testing_py.html  z_14050737f811349a_expand_op_test_py.html  z_14050737f811349a_flatten_op_test_py.html  z_14050737f811349a_permute_op_test_py.html  z_14050737f811349a_reshape_op_test_py.html  z_14050737f811349a_squeeze_op_test_py.html  z_14050737f811349a_transpose_op_test_py.html  z_14050737f811349a_unflatten_op_test_py.html  z_14050737f811349a_unsqueeze_op_test_py.html  z_14050737f811349a_view_op_test_py.html  z_143cbfd7fdfbe5eb_ops_test_py.html  z_143cbfd7fdfbe5eb_pipeline_parallelized_test_py.html  z_143cbfd7fdfbe5eb_qconv_test_py.html  z_143cbfd7fdfbe5eb_quantized_test_py.html  z_143cbfd7fdfbe5eb_sharded_test_py.html  z_143cbfd7fdfbe5eb_test_attention_ops_py.html  z_14b4a91d90347f7f___init___py.html  z_14b4a91d90347f7f_dataset_py.html  z_14b4a91d90347f7f_sharding_py.html  z_16ed182c0fe4cb37___init___py.html  z_16ed182c0fe4cb37__registry_py.html  z_16ed182c0fe4cb37_attention_impls_py.html  z_16ed182c0fe4cb37_cpu_impls_py.html  z_16ed182c0fe4cb37_custom_impls_py.html  z_16ed182c0fe4cb37_default_impls_py.html  z_16ed182c0fe4cb37_qconv_impls_py.html  (+228 more)
scripts/: export_and_compile.sh  setenv.sh
sharkfuser/: .clang-tidy  .gitignore  CMakeLists.txt  README.md  version.json
sharkfuser/benchmarks/: CMakeLists.txt  driver.cpp  run_benchmark.py  test_benchmark_runner.sh  test_commands.txt
sharkfuser/build_tools/cmake/: FusilliTestUtils.cmake
sharkfuser/build_tools/docker/: exec_docker_ci.sh  run_docker.sh
sharkfuser/include/: fusili.h  fusilli.h  sharkfuser.h
sharkfuser/include/fusili/: emit_asm.h  graph.h  logging.h  types.h
sharkfuser/include/fusili/node/: conv_node.h  node.h
sharkfuser/include/fusilli/attributes/: attributes.h  conv_attributes.h  matmul_attributes.h  pointwise_attributes.h  tensor_attributes.h  types.h
sharkfuser/include/fusilli/backend/: backend.h  buffer.h  handle.h  runtime.h
sharkfuser/include/fusilli/graph/: graph.h
sharkfuser/include/fusilli/node/: conv_node.h  node.h  pointwise_node.h
sharkfuser/include/fusilli/support/: asm_emitter.h  cache.h  extras.h  logging.h
sharkfuser/include/sharkfuser/: sharkfuser.h
sharkfuser/samples/: CMakeLists.txt  utils.h
sharkfuser/samples/convolution/: conv_benchmark.cpp  conv_dgrad_nhwc_krsc.cpp  conv_dgrad_nhwc_krsc_grouped.cpp  conv_fprop.cpp  conv_fprop_benchmark_driver.cpp  conv_fprop_cpu.cpp  conv_fprop_gpu.cpp  conv_fprop_grouped_nchw_kcrs.cpp  conv_fprop_grouped_with_relu_and_bias.cpp  conv_fprop_nchw_kcrs.cpp  conv_fprop_nchw_kcrs_grouped.cpp  conv_fprop_nhwc_krsc.cpp  conv_fprop_nhwc_krsc_with_pad.cpp  conv_fprop_with_bias.cpp  conv_fprop_with_relu.cpp  conv_fprop_with_relu_and_bias.cpp  conv_wgrad_nhwc_krsc.cpp  conv_wgrad_nhwc_krsc_grouped.cpp  conv_wgrad_nhwc_krsc_grouped_strided.cpp
sharkfuser/samples/pointwise/: pointwise_add_transposed.cpp  pointwise_binary_ops.cpp  pointwise_unary_ops.cpp
sharkfuser/tests/: CMakeLists.txt  test_attributes.cpp  test_buffer.cpp  test_cache.cpp  test_cache_empty.sh  test_conv_attributes.cpp  test_conv_node.cpp  test_graph.cpp  test_handle.cpp  test_logging.cpp  test_matmul_attributes.cpp  test_pointwise_node.cpp  test_sharkfuser.cpp  test_tensor_attributes.cpp  utils.h
sharkfuser/tests/amdgpu_tests/: CMakeLists.txt  test_graph.cpp
sharkfuser/tests/benchmarks/: test_commands.txt  test_run_benchmark.sh
sharkfuser/tests/hip_tests/: CMakeLists.txt  hello.cpp  hip_kernels.h  hip_utils.h  test_buffer.cpp  test_handle.cpp  test_hip_buffer_import_api.cpp
sharkfuser/tests/hip_tests/samples/: conv_fprop_nchw_kcrs.cpp
sharkfuser/tests/lit/: test_asm_emitter.cpp  test_conv_asm_emitter_nchw_kcrs.cpp  test_conv_asm_emitter_nchw_kcrs_with_pad.cpp  test_conv_asm_emitter_nchw_krsc.cpp  test_conv_asm_emitter_ndhwc_kdrsc.cpp  test_conv_asm_emitter_ndhwc_kdrsc_grouped.cpp  test_conv_asm_emitter_nhwc_kcrs.cpp  test_conv_asm_emitter_nhwc_krsc.cpp  test_conv_asm_emitter_nhwc_krsc_grouped.cpp  test_conv_asm_emitter_nhwc_krsc_with_pad.cpp  test_conv_asm_emitter_nhwc_krsc_with_relu.cpp  test_conv_dgrad_asm_emitter_nhwc_kcrs.cpp  test_conv_dgrad_asm_emitter_nhwc_kcrs_grouped.cpp  test_conv_nchw_asm_emitter.cpp  test_conv_nhwc_asm_emitter.cpp  test_conv_wgrad_asm_emitter_nhwc_krsc.cpp  test_conv_wgrad_asm_emitter_nhwc_krsc_grouped.cpp  test_conv_wgrad_asm_emitter_nhwc_krsc_grouped_strided.cpp  test_pointwise_asm_emitter_add.cpp  test_pointwise_asm_emitter_add_transposed.cpp  test_pointwise_asm_emitter_div.cpp  test_pointwise_asm_emitter_mul.cpp  test_pointwise_asm_emitter_relu.cpp  test_pointwise_asm_emitter_sub.cpp
sharktuner/: README.md  pyproject.toml  requirements-iree.txt
sharktuner/boo_tuner/: README.md  __main__.py  boo_tuner.py  example_configs.txt
sharktuner/dispatch_tuner/: dispatch_tuner.py
sharktuner/model_tuner/: model_tuner.py
sharktuner/sharktuner/: candidate_gen.py  candidate_ordering.py  common.py  constraint_generator.py  dispatch_constraints.py  dispatch_parser.py  libtuner.py  spec_builder.py
sharktuner/tests/: boo_tuner_test.py  candidate_gen_test.py  candidate_ordering_test.py  common_test.py  constraint_generator_test.py  dispatch_constraints_test.py  dispatch_parser_test.py  (+2 more)
shortfin/: CMakeLists.txt  requirements-tests.txt  setup.py
(+16 files in other folders)
